// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Camper selectors camperExternalCalendarsSelector 1`] = `
Array [
  Object {
    "camperCalendar": Object {
      "blockedPeriods": Array [],
      "camper": Object {
        "actualCashValue": 35000,
        "amenities": Array [],
        "camperAddition": Object {
          "id": "4ffccc2f-ead3-40c9-abf3-e0d94e360282",
          "type": "camperAddition",
        },
        "camperCalendar": [Circular],
        "camperPhotos": Array [],
        "camperRule": null,
        "deliveryInformation": null,
        "description": null,
        "estimatedEarning": 1300,
        "glamper": false,
        "id": "62848c15-e22c-4b13-9b7e-3a9b758b35ab",
        "insuranceInfo": Object {
          "id": "5120502c-8fdd-4106-9385-9e0da5022cbb",
          "type": "insuranceInfo",
        },
        "latitude": 34.0544,
        "longitude": -118.2439,
        "name": null,
        "owner": Object {
          "id": "0a172c20-60f5-4713-aef2-1dc4d28af9d7",
          "type": "owner",
        },
        "place": "Los Angeles, California, United States",
        "placeId": "place.6694790146427640",
        "publicId": "7742423",
        "raiting": 100,
        "specificationDetail": Object {
          "id": "41bf68a4-1238-4674-ad61-7fc0128b921f",
          "type": "specificationDetail",
        },
        "status": "deactivated",
        "tripFee": null,
        "vehicleTypeIconUrl": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/vehicletype/75b01466-098c-4963-b805-bc7594939e07/icon/6c7c49eaff91c9cb839e7cf7e55c8206.svg",
        "vehicleTypeName": "Vehicle Camper",
      },
      "customDiscountPeriods": Array [],
      "externalCalendars": Array [
        [Circular],
      ],
      "id": "c453f097-8959-45d0-b5c7-b82f011fb5ea",
      "pricingInfo": null,
      "pricingPeriods": Array [],
    },
    "events": Array [],
    "id": "25c49d50-4413-4e6e-9717-b2ee4273f0dd",
    "name": "Evhenii Hryhoriev",
  },
]
`;

exports[`Camper selectors camperPossibleAmenitiesSelector() when camper amenities is present with custom amenities 1`] = `
Array [
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "8b5acb66-7cf1-4a6b-80ff-0c93d6859ae5",
            "state": false,
            "title": "Hookups Required For A/C",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "3e047a0a-d37b-4d2f-8bf1-d5270b89090b",
            "state": false,
            "title": "Off Grid Air Conditioner",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "a2226dd2-f731-42d5-b161-4a3179dbaed7",
            "state": false,
            "title": "A/C Only While Camper is On",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "38b30eae-7d94-4cc7-b08c-44409edece02",
        "state": false,
        "title": "Air conditioner",
        "tooltip": null,
        "type": "toggler",
      },
      Object {
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "1eb933d8-ac20-4627-bbb8-d362261d03d1",
            "state": false,
            "title": "Portable Heater",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "65418756-c3a6-4f5e-999a-9ffe62494536",
            "state": false,
            "title": "Air Heating System",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "a4be548a-7f9b-4b8c-89d0-3c57cdfd7120",
            "state": false,
            "title": "Heating Only While Camper is On",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "4bf65e35-d340-486b-b498-1bb31bfa121d",
        "state": false,
        "title": "Heating",
        "tooltip": null,
        "type": "toggler",
      },
    ],
    "configurationCustomAmenities": Array [
      Object {
        "id": undefined,
        "name": undefined,
        "quantity": undefined,
      },
    ],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "996b052a-e8af-40ce-8749-cd48e906baaf",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Ceiling Fan",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "eab0fdca-16c3-4184-aef8-311b1bf2ed01",
    "title": "Climate Control",
  },
  Object {
    "configurationAmenityOptions": Array [],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "2c826f37-91dc-4482-a67d-d2f2967b97c5",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "King bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "8be320dd-df33-4225-b8c4-6cb17c65e902",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Twin bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "de3c1f60-ea5d-4b8e-8964-d506c7530bfe",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Queen bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "b4894dcd-eb51-4953-b9fc-6b7142f95237",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Single bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "d9c7b20c-dec8-47f7-bf98-298a696f6844",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Bunk bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "e544a8a3-3bc6-429c-8bdd-f3a26f9665dc",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Dinette conversion",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "ff75edbf-4f60-4b01-b3a0-79fbe2df8c10",
    "title": "Bathroom",
  },
  Object {
    "configurationAmenityOptions": Array [],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "058785da-2eed-4c91-bac7-4791f54d0686",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "King bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "af80fb05-44ea-40ed-ac45-3765cedec993",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Twin bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "a78eb724-4bec-488d-a00e-8afe3997ce0a",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Queen bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "bd41dba4-e7e1-4e17-bc54-15ecfeeb0e87",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Single bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "2faad202-0c67-49fc-a785-2e1538666ba0",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Bunk bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "915089e7-48a1-4dc3-91f3-b7d82d465944",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Dinette conversion",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "245850cd-75b6-442f-a18b-837cd91ea6e5",
    "title": "Kitchen",
  },
  Object {
    "configurationAmenityOptions": Array [],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "54cac3fb-2743-4953-b21b-225a2ea47447",
        "maxQuantity": 10,
        "quantity": 10,
        "state": true,
        "title": "King bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "b55ecf58-6a95-4bf3-b1fe-b8ac1bf1d2a0",
        "maxQuantity": 10,
        "quantity": 1,
        "state": false,
        "title": "Twin bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "8fd7b975-daa4-4a08-87b2-479a53f789e6",
        "maxQuantity": 10,
        "quantity": 1,
        "state": false,
        "title": "Queen bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "9152fe3c-456c-48bc-8b44-af28c11ae584",
        "maxQuantity": 10,
        "quantity": 1,
        "state": false,
        "title": "Single bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "ef65e471-a83c-46fb-9b0a-6e8583cf21b4",
        "maxQuantity": 10,
        "quantity": 1,
        "state": false,
        "title": "Bunk bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "156e80ca-432f-4850-aba7-e1abcbdc9b91",
        "maxQuantity": 10,
        "quantity": 1,
        "state": false,
        "title": "Dinette conversion",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "93ed1cf3-a645-4912-9d74-3000e67fe3d9",
    "title": "Accomodation",
  },
  Object {
    "configurationAmenityOptions": Array [],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "0925d8a2-3f91-4b2a-a33c-8c1971486a19",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Upgraded Speaker System",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "240b545f-6861-4e0f-b0ae-2d887f81f6e8",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Bluetooth Speaker",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "ce7a00ef-a5d9-4f01-87f6-74da13b2e797",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "TV",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "d7c5501b-6484-4137-8e4c-9f63f4b63f4e",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Wifi Router",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "4d3893f3-932b-4401-b627-58774ae30bd1",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Cell Signal Booster",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "70093afe-43ba-4706-89d1-23117632fa57",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Radio",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "8d08c5df-43bc-4597-938e-e18752a9664b",
    "title": "Entertainment",
  },
  Object {
    "configurationAmenityOptions": Array [],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "bf00cdfb-c28a-4065-b32d-dd6e7a3b6e4f",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Large Mattress",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "b3f036b6-8995-427a-a334-15fd5d20f49e",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Extra Storage",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "cd0e12e7-9d33-440e-b7be-f12d7fd0f97a",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Blackout Shades",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "9de56b33-8136-47af-8d0e-5c3e283b2368",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Sleep Sideways",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "a5f1e329-fa2a-4e91-b678-ccca813eb154",
    "title": "Bedroom",
  },
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": null,
        "id": "730b21ec-2d4a-4ca4-85e8-966388a8c29b",
        "state": true,
        "title": "Off Grid Capable System",
        "tooltip": null,
        "type": "toggler",
      },
      Object {
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "aafabb27-5065-4240-b99f-2baea96a535f",
            "state": true,
            "title": "Battery Storage(under 300 amp hours)",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "c9a7626e-2f6b-43c5-a2f3-b78b64c87a2a",
            "state": false,
            "title": "Battery Storage(300+ amp hours)",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "4c944b35-faaf-4515-a24f-1df59c1dfdd7",
            "state": false,
            "title": "Alternator Charger",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "353d6e91-6039-4eca-9f86-e7b220f80a08",
            "state": false,
            "title": "Inverter",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "5df5ee66-7b49-4e94-a440-277f602e0911",
            "state": false,
            "title": "A/C Electrical Outlets",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "a8d4c375-b91a-467f-9f9e-351fd83e0f6b",
            "state": false,
            "title": "Solar Panels",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "1973200d-78b3-422c-9020-214189dbe826",
        "state": true,
        "title": "Electric Power System",
        "tooltip": null,
        "type": "checkbox",
      },
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": null,
        "id": "aa38a2e0-3d12-435c-a56f-d59fcca76114",
        "state": false,
        "title": "Propan Fuel System",
        "tooltip": null,
        "type": "checkbox",
      },
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": null,
        "id": "a02d7663-61c5-42bb-86e4-348f52c73f09",
        "state": false,
        "title": "Generator",
        "tooltip": null,
        "type": "checkbox",
      },
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": null,
        "id": "6c496237-3ef2-462b-ae3b-f2f4445ef666",
        "state": false,
        "title": "Shore Power Hookups",
        "tooltip": null,
        "type": "toggler",
      },
    ],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [],
    "iconUrl": null,
    "id": "480d527e-a832-4abc-9b6b-5c5b42850dc6",
    "title": "Power System",
  },
]
`;

exports[`Camper selectors camperPossibleAmenitiesSelector() when camper amenities is present without custom amenities 1`] = `
Array [
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "8b5acb66-7cf1-4a6b-80ff-0c93d6859ae5",
            "state": false,
            "title": "Hookups Required For A/C",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "3e047a0a-d37b-4d2f-8bf1-d5270b89090b",
            "state": false,
            "title": "Off Grid Air Conditioner",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "a2226dd2-f731-42d5-b161-4a3179dbaed7",
            "state": false,
            "title": "A/C Only While Camper is On",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "38b30eae-7d94-4cc7-b08c-44409edece02",
        "state": false,
        "title": "Air conditioner",
        "tooltip": null,
        "type": "toggler",
      },
      Object {
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "1eb933d8-ac20-4627-bbb8-d362261d03d1",
            "state": false,
            "title": "Portable Heater",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "65418756-c3a6-4f5e-999a-9ffe62494536",
            "state": false,
            "title": "Air Heating System",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "a4be548a-7f9b-4b8c-89d0-3c57cdfd7120",
            "state": false,
            "title": "Heating Only While Camper is On",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "4bf65e35-d340-486b-b498-1bb31bfa121d",
        "state": false,
        "title": "Heating",
        "tooltip": null,
        "type": "toggler",
      },
    ],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "996b052a-e8af-40ce-8749-cd48e906baaf",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Ceiling Fan",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "eab0fdca-16c3-4184-aef8-311b1bf2ed01",
    "title": "Climate Control",
  },
  Object {
    "configurationAmenityOptions": Array [],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "2c826f37-91dc-4482-a67d-d2f2967b97c5",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "King bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "8be320dd-df33-4225-b8c4-6cb17c65e902",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Twin bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "de3c1f60-ea5d-4b8e-8964-d506c7530bfe",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Queen bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "b4894dcd-eb51-4953-b9fc-6b7142f95237",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Single bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "d9c7b20c-dec8-47f7-bf98-298a696f6844",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Bunk bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "e544a8a3-3bc6-429c-8bdd-f3a26f9665dc",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Dinette conversion",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "ff75edbf-4f60-4b01-b3a0-79fbe2df8c10",
    "title": "Bathroom",
  },
  Object {
    "configurationAmenityOptions": Array [],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "058785da-2eed-4c91-bac7-4791f54d0686",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "King bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "af80fb05-44ea-40ed-ac45-3765cedec993",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Twin bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "a78eb724-4bec-488d-a00e-8afe3997ce0a",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Queen bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "bd41dba4-e7e1-4e17-bc54-15ecfeeb0e87",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Single bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "2faad202-0c67-49fc-a785-2e1538666ba0",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Bunk bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "915089e7-48a1-4dc3-91f3-b7d82d465944",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Dinette conversion",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "245850cd-75b6-442f-a18b-837cd91ea6e5",
    "title": "Kitchen",
  },
  Object {
    "configurationAmenityOptions": Array [],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "54cac3fb-2743-4953-b21b-225a2ea47447",
        "maxQuantity": 10,
        "quantity": 10,
        "state": true,
        "title": "King bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "b55ecf58-6a95-4bf3-b1fe-b8ac1bf1d2a0",
        "maxQuantity": 10,
        "quantity": 1,
        "state": false,
        "title": "Twin bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "8fd7b975-daa4-4a08-87b2-479a53f789e6",
        "maxQuantity": 10,
        "quantity": 1,
        "state": false,
        "title": "Queen bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "9152fe3c-456c-48bc-8b44-af28c11ae584",
        "maxQuantity": 10,
        "quantity": 1,
        "state": false,
        "title": "Single bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "ef65e471-a83c-46fb-9b0a-6e8583cf21b4",
        "maxQuantity": 10,
        "quantity": 1,
        "state": false,
        "title": "Bunk bed",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "156e80ca-432f-4850-aba7-e1abcbdc9b91",
        "maxQuantity": 10,
        "quantity": 1,
        "state": false,
        "title": "Dinette conversion",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "93ed1cf3-a645-4912-9d74-3000e67fe3d9",
    "title": "Accomodation",
  },
  Object {
    "configurationAmenityOptions": Array [],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "0925d8a2-3f91-4b2a-a33c-8c1971486a19",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Upgraded Speaker System",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "240b545f-6861-4e0f-b0ae-2d887f81f6e8",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Bluetooth Speaker",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "ce7a00ef-a5d9-4f01-87f6-74da13b2e797",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "TV",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "d7c5501b-6484-4137-8e4c-9f63f4b63f4e",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Wifi Router",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "4d3893f3-932b-4401-b627-58774ae30bd1",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Cell Signal Booster",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "70093afe-43ba-4706-89d1-23117632fa57",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Radio",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "8d08c5df-43bc-4597-938e-e18752a9664b",
    "title": "Entertainment",
  },
  Object {
    "configurationAmenityOptions": Array [],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": null,
        "id": "bf00cdfb-c28a-4065-b32d-dd6e7a3b6e4f",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Large Mattress",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "b3f036b6-8995-427a-a334-15fd5d20f49e",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Extra Storage",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "cd0e12e7-9d33-440e-b7be-f12d7fd0f97a",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Blackout Shades",
        "tooltip": null,
      },
      Object {
        "iconUrl": null,
        "id": "9de56b33-8136-47af-8d0e-5c3e283b2368",
        "maxQuantity": 0,
        "quantity": 0,
        "state": false,
        "title": "Sleep Sideways",
        "tooltip": null,
      },
    ],
    "iconUrl": null,
    "id": "a5f1e329-fa2a-4e91-b678-ccca813eb154",
    "title": "Bedroom",
  },
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": null,
        "id": "730b21ec-2d4a-4ca4-85e8-966388a8c29b",
        "state": true,
        "title": "Off Grid Capable System",
        "tooltip": null,
        "type": "toggler",
      },
      Object {
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "aafabb27-5065-4240-b99f-2baea96a535f",
            "state": false,
            "title": "Battery Storage(under 300 amp hours)",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "c9a7626e-2f6b-43c5-a2f3-b78b64c87a2a",
            "state": false,
            "title": "Battery Storage(300+ amp hours)",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "4c944b35-faaf-4515-a24f-1df59c1dfdd7",
            "state": false,
            "title": "Alternator Charger",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "353d6e91-6039-4eca-9f86-e7b220f80a08",
            "state": false,
            "title": "Inverter",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "5df5ee66-7b49-4e94-a440-277f602e0911",
            "state": false,
            "title": "A/C Electrical Outlets",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "a8d4c375-b91a-467f-9f9e-351fd83e0f6b",
            "state": false,
            "title": "Solar Panels",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "1973200d-78b3-422c-9020-214189dbe826",
        "state": false,
        "title": "Electric Power System",
        "tooltip": null,
        "type": "checkbox",
      },
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": null,
        "id": "aa38a2e0-3d12-435c-a56f-d59fcca76114",
        "state": false,
        "title": "Propan Fuel System",
        "tooltip": null,
        "type": "checkbox",
      },
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": null,
        "id": "a02d7663-61c5-42bb-86e4-348f52c73f09",
        "state": false,
        "title": "Generator",
        "tooltip": null,
        "type": "checkbox",
      },
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": null,
        "id": "6c496237-3ef2-462b-ae3b-f2f4445ef666",
        "state": false,
        "title": "Shore Power Hookups",
        "tooltip": null,
        "type": "toggler",
      },
    ],
    "configurationCustomAmenities": Array [],
    "configurationSubAmenities": Array [],
    "iconUrl": null,
    "id": "480d527e-a832-4abc-9b6b-5c5b42850dc6",
    "title": "Power System",
  },
]
`;

exports[`Camper selectors camperPossibleAmenitiesSelector() when configuration amenities is present 1`] = `
Array [
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": "http://localhost:3000/uploads/store/configurationamenityoption/7283b836-95e1-4973-9abd-2d8df62e1d7c/icon/f0bc19e0f37c37c523b23ae177136865.jpg",
        "id": "7283b836-95e1-4973-9abd-2d8df62e1d7c",
        "state": false,
        "title": "Gavin Pacocha",
        "tooltip": null,
        "type": "checkbox",
      },
    ],
    "configurationCustomAmenities": undefined,
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": "http://localhost:3000/uploads/store/configurationsubamenity/d8c83be8-f594-4118-b4bf-b083b277e712/icon/12024cfdb35345ba82394b12beb2a9d7.jpg",
        "id": "d8c83be8-f594-4118-b4bf-b083b277e712",
        "maxQuantity": undefined,
        "quantity": undefined,
        "state": false,
        "title": "Lyndia Hickle",
        "tooltip": "Odio suscipit dolor odit ea asperiores qui.",
      },
    ],
    "iconUrl": "http://localhost:3000/uploads/store/configurationamenity/3236d152-5264-4c8e-848a-af3a33d999af/icon/bec1fe9b33d92958c6797a88f1772faa.jpg",
    "id": "3236d152-5264-4c8e-848a-af3a33d999af",
    "title": "Chasity Schroeder",
  },
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": "http://localhost:3000/uploads/store/configurationamenityoption/bdefad6b-d5c1-4268-ac23-add1e0f94006/icon/f1e2637e302cecc36eb0d54dc91cbaeb.jpg",
        "id": "bdefad6b-d5c1-4268-ac23-add1e0f94006",
        "state": false,
        "title": "Ok Hilll",
        "tooltip": null,
        "type": "toggler",
      },
    ],
    "configurationCustomAmenities": undefined,
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": "http://localhost:3000/uploads/store/configurationsubamenity/81d8a856-e96e-47e4-8ad5-e10a706aa6d8/icon/9d0e854bf7ea69a4bcdeaa0af3ce44fe.jpg",
        "id": "81d8a856-e96e-47e4-8ad5-e10a706aa6d8",
        "maxQuantity": undefined,
        "quantity": undefined,
        "state": false,
        "title": "Rima Reichert",
        "tooltip": "Distinctio labore esse quas dolore impedit accusantium.",
      },
    ],
    "iconUrl": "http://localhost:3000/uploads/store/configurationamenity/46da61e1-7b2b-4251-b56c-39b8f3ddbc00/icon/fc650675ecf7264d26c694eb59b3ce57.jpg",
    "id": "46da61e1-7b2b-4251-b56c-39b8f3ddbc00",
    "title": "Eun Pouros",
  },
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": "http://localhost:3000/uploads/store/configurationamenityoption/cd7b1e65-7ce4-4b92-b9d4-6fb1006ebc15/icon/bdbfe8e42ea8dac06e0e55182c5416b5.jpg",
        "id": "cd7b1e65-7ce4-4b92-b9d4-6fb1006ebc15",
        "state": false,
        "title": "Georgette Rippin",
        "tooltip": null,
        "type": "toggler",
      },
    ],
    "configurationCustomAmenities": undefined,
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": "http://localhost:3000/uploads/store/configurationsubamenity/686b3a43-defd-401d-a65e-b5a7c8bff76f/icon/be53ac9a6c53cb1ac7f995db73d1612c.jpg",
        "id": "686b3a43-defd-401d-a65e-b5a7c8bff76f",
        "maxQuantity": undefined,
        "quantity": undefined,
        "state": false,
        "title": "Waneta Runolfsson",
        "tooltip": "Natus dolore ab rerum aspernatur esse accusantium.",
      },
    ],
    "iconUrl": "http://localhost:3000/uploads/store/configurationamenity/d6d53b54-adf9-43d3-a14c-123e9f2d7b54/icon/c1f106e140b8a3891ea8cc10a67dc267.jpg",
    "id": "d6d53b54-adf9-43d3-a14c-123e9f2d7b54",
    "title": "Marilou Mante",
  },
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": "http://localhost:3000/uploads/store/configurationamenityoption/4b835dd3-794c-45ef-b609-34cb2db6b5d4/icon/e4c312e0f664f4a913b32cf74ae5f564.jpg",
        "id": "4b835dd3-794c-45ef-b609-34cb2db6b5d4",
        "state": false,
        "title": "Blanche VonRueden",
        "tooltip": null,
        "type": "checkbox",
      },
    ],
    "configurationCustomAmenities": undefined,
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": "http://localhost:3000/uploads/store/configurationsubamenity/50b2a135-3820-4b34-a517-c02a50550b32/icon/edbddfd329a0accba60ea98e148af912.jpg",
        "id": "50b2a135-3820-4b34-a517-c02a50550b32",
        "maxQuantity": undefined,
        "quantity": undefined,
        "state": false,
        "title": "Eugene Corwin",
        "tooltip": "Quae animi nesciunt doloremque vel fugiat aspernatur enim.",
      },
    ],
    "iconUrl": "http://localhost:3000/uploads/store/configurationamenity/280a103c-c8f6-40df-b4be-d97192318660/icon/ae10861ac6c45772a05eeab15c97d25c.jpg",
    "id": "280a103c-c8f6-40df-b4be-d97192318660",
    "title": "Aldo Shanahan",
  },
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": "http://localhost:3000/uploads/store/configurationamenityoption/ff791eb0-7c5e-4ba9-9584-1db84edb16ea/icon/cbdcc2aa15a9c26a6c9232c3345007dd.jpg",
        "id": "ff791eb0-7c5e-4ba9-9584-1db84edb16ea",
        "state": false,
        "title": "Marylou Gerhold",
        "tooltip": null,
        "type": "toggler",
      },
    ],
    "configurationCustomAmenities": undefined,
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": "http://localhost:3000/uploads/store/configurationsubamenity/16524b44-c1de-445d-a2ee-9bf12b18d2b0/icon/826cebf5459db1107c084ff84d826bbc.jpg",
        "id": "16524b44-c1de-445d-a2ee-9bf12b18d2b0",
        "maxQuantity": undefined,
        "quantity": undefined,
        "state": false,
        "title": "Rick Kiehn",
        "tooltip": "Harum eligendi facere odio minima.",
      },
    ],
    "iconUrl": "http://localhost:3000/uploads/store/configurationamenity/10ab5579-a4f6-4af0-8b0b-3bde044913ce/icon/8ab1472f301d9c0421d1e460ab03ac5b.jpg",
    "id": "10ab5579-a4f6-4af0-8b0b-3bde044913ce",
    "title": "Theresa Prohaska",
  },
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": "http://localhost:3000/uploads/store/configurationamenityoption/2f2553ab-c149-468c-8798-a55d9c33bd26/icon/2d7e0f8be903125f26a55918ec1952b9.jpg",
        "id": "2f2553ab-c149-468c-8798-a55d9c33bd26",
        "state": false,
        "title": "Roseann Kirlin",
        "tooltip": null,
        "type": "checkbox",
      },
    ],
    "configurationCustomAmenities": undefined,
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": "http://localhost:3000/uploads/store/configurationsubamenity/ee24fbdd-3d41-411b-b965-1ed4e98074f0/icon/4ce57a68030613607f3553ab1f3869c1.jpg",
        "id": "ee24fbdd-3d41-411b-b965-1ed4e98074f0",
        "maxQuantity": undefined,
        "quantity": undefined,
        "state": false,
        "title": "Craig Willms",
        "tooltip": "Quos rem perferendis excepturi corporis.",
      },
    ],
    "iconUrl": "http://localhost:3000/uploads/store/configurationamenity/6ebceec3-fe47-407c-b66f-96a4334adfd2/icon/55e11006d88106486d9644d42286787a.jpg",
    "id": "6ebceec3-fe47-407c-b66f-96a4334adfd2",
    "title": "Fredia Stark",
  },
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": "http://localhost:3000/uploads/store/configurationamenityoption/76bb2ca6-e02f-4a0c-8d87-43adb6dff0dc/icon/f0d6b2a85c4ac05da327b8d08ece8491.jpg",
        "id": "76bb2ca6-e02f-4a0c-8d87-43adb6dff0dc",
        "state": false,
        "title": "Many Toy",
        "tooltip": null,
        "type": "checkbox",
      },
    ],
    "configurationCustomAmenities": undefined,
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": "http://localhost:3000/uploads/store/configurationsubamenity/04e2d1b7-c367-4bfa-9736-042566de67d3/icon/91d053c7f9aba110e03c8fc8e4dde9ad.jpg",
        "id": "04e2d1b7-c367-4bfa-9736-042566de67d3",
        "maxQuantity": undefined,
        "quantity": undefined,
        "state": false,
        "title": "Lurlene Waters",
        "tooltip": "Sint vel quae quis numquam.",
      },
    ],
    "iconUrl": "http://localhost:3000/uploads/store/configurationamenity/f49a95cd-2642-4b65-9634-55d10d7e4147/icon/cc517ad7b563f6830dc91fdc025a596d.jpg",
    "id": "f49a95cd-2642-4b65-9634-55d10d7e4147",
    "title": "Carmelia Prosacco",
  },
  Object {
    "configurationAmenityOptions": Array [
      Object {
        "configurationSubAmenities": Array [],
        "iconUrl": "http://localhost:3000/uploads/store/configurationamenityoption/1ba1f0fe-fffb-4e6f-9247-534bb63e4e77/icon/7b9cc0afbdcb2d35f3172176765778d8.jpg",
        "id": "1ba1f0fe-fffb-4e6f-9247-534bb63e4e77",
        "state": false,
        "title": "Ashton Goldner",
        "tooltip": null,
        "type": "toggler",
      },
    ],
    "configurationCustomAmenities": undefined,
    "configurationSubAmenities": Array [
      Object {
        "iconUrl": "http://localhost:3000/uploads/store/configurationsubamenity/30cf9ac6-3975-437e-9c82-647b2a2ea6f0/icon/c98af82bf02014c27054235915a3621f.jpg",
        "id": "30cf9ac6-3975-437e-9c82-647b2a2ea6f0",
        "maxQuantity": undefined,
        "quantity": undefined,
        "state": false,
        "title": "Young Pouros",
        "tooltip": "Veritatis aut velit eaque voluptatum ratione modi ea.",
      },
    ],
    "iconUrl": "http://localhost:3000/uploads/store/configurationamenity/3ededc5c-2fb8-43a6-bf32-3446d8b97b2b/icon/55eb6ff5fdc4348fb7e02d8f46608139.jpg",
    "id": "3ededc5c-2fb8-43a6-bf32-3446d8b97b2b",
    "title": "Eileen Bogisich",
  },
]
`;

exports[`Camper selectors camperPricingSelector() returns camper pricing when state is present 1`] = `
Object {
  "calendarAvailability": 6,
  "costPerNight": 100,
  "costomizialeNightCost": false,
  "deliveryDropoff": "2000-01-01T11:00:00.000Z",
  "deliveryPickup": "2000-01-01T16:00:00.000Z",
  "minimalNightStay": "4",
  "monthlyDiscount": true,
  "monthlyDiscountPercent": 20,
  "preparationTime": 0,
  "weekNightPrice": Object {
    "friday_price": 250,
    "monday_price": 250,
    "saturday_price": 250,
    "sunday_price": 250,
    "thursday_price": 250,
    "tuesday_price": 250,
    "wednesday_price": 250,
  },
  "weeklyDiscount": true,
  "weeklyDiscountPercent": 20,
}
`;

exports[`Camper selectors camperSelectedAmenitiesSelector() when camper amenities is present 1`] = `
Object {
  "245850cd-75b6-442f-a18b-837cd91ea6e5": Object {
    "amenityOptions": Object {},
    "customAmenities": Array [],
    "subAmenities": Object {},
  },
  "480d527e-a832-4abc-9b6b-5c5b42850dc6": Object {
    "amenityOptions": Object {
      "1973200d-78b3-422c-9020-214189dbe826": Object {
        "state": true,
        "subAmenities": Array [
          "aafabb27-5065-4240-b99f-2baea96a535f",
        ],
      },
      "730b21ec-2d4a-4ca4-85e8-966388a8c29b": Object {
        "state": true,
        "subAmenities": Array [],
      },
    },
    "customAmenities": Array [],
    "subAmenities": Object {},
  },
  "8d08c5df-43bc-4597-938e-e18752a9664b": Object {
    "amenityOptions": Object {},
    "customAmenities": Array [],
    "subAmenities": Object {},
  },
  "93ed1cf3-a645-4912-9d74-3000e67fe3d9": Object {
    "amenityOptions": Object {},
    "customAmenities": Array [],
    "subAmenities": Object {
      "54cac3fb-2743-4953-b21b-225a2ea47447": Object {
        "quantity": 10,
        "state": true,
      },
    },
  },
  "a5f1e329-fa2a-4e91-b678-ccca813eb154": Object {
    "amenityOptions": Object {},
    "customAmenities": Array [],
    "subAmenities": Object {},
  },
  "eab0fdca-16c3-4184-aef8-311b1bf2ed01": Object {
    "amenityOptions": Object {},
    "customAmenities": Array [
      Object {
        "id": undefined,
        "type": "",
      },
    ],
    "subAmenities": Object {},
  },
  "ff75edbf-4f60-4b01-b3a0-79fbe2df8c10": Object {
    "amenityOptions": Object {},
    "customAmenities": Array [],
    "subAmenities": Object {},
  },
}
`;

exports[`Camper selectors vehicleMakeSelector() returns vehicle make 1`] = `
Array [
  Object {
    "id": "0913145e-46b1-4fff-971c-a4e4a51eef67",
    "name": "Lenny Abbott",
    "vehicleModels": Array [
      Object {
        "builderName": "Zenia Beier",
        "id": "1dfee368-b441-4286-9ef8-0c3ea80d97ed",
        "insideHeigh": "Belinda Connelly",
        "length": "34.78",
        "name": "Winford Erdman",
        "year": 1156,
      },
      Object {
        "builderName": "Kizzie Christiansen",
        "id": "4dd50b17-a49e-4683-83b2-14dbc5082259",
        "insideHeigh": "Royce Reichel",
        "length": "88.25",
        "name": "Hester Dietrich",
        "year": 1422,
      },
    ],
  },
]
`;

exports[`Camper selectors vehicleModelSelector() returns vehicle model 1`] = `
Array [
  Object {
    "builderName": "Zenia Beier",
    "id": "1dfee368-b441-4286-9ef8-0c3ea80d97ed",
    "insideHeigh": "Belinda Connelly",
    "length": "34.78",
    "name": "Winford Erdman",
    "year": 1156,
  },
  Object {
    "builderName": "Kizzie Christiansen",
    "id": "4dd50b17-a49e-4683-83b2-14dbc5082259",
    "insideHeigh": "Royce Reichel",
    "length": "88.25",
    "name": "Hester Dietrich",
    "year": 1422,
  },
]
`;

exports[`Camper selectors vehicleTypeSelector() returns vehicle type 1`] = `
Array [
  Object {
    "iconUrl": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/vehicletype/92940491-75c6-434c-bf97-52ce18550b27/icon/55d0125c47edaa9edca5adb33aa24957.svg",
    "id": "92940491-75c6-434c-bf97-52ce18550b27",
    "name": "Hai Sporer",
    "vehicleMakes": Array [
      Object {
        "id": "0913145e-46b1-4fff-971c-a4e4a51eef67",
        "name": "Lenny Abbott",
        "vehicleModels": Array [
          Object {
            "builderName": "Zenia Beier",
            "id": "1dfee368-b441-4286-9ef8-0c3ea80d97ed",
            "insideHeigh": "Belinda Connelly",
            "length": "34.78",
            "name": "Winford Erdman",
            "year": 1156,
          },
          Object {
            "builderName": "Kizzie Christiansen",
            "id": "4dd50b17-a49e-4683-83b2-14dbc5082259",
            "insideHeigh": "Royce Reichel",
            "length": "88.25",
            "name": "Hester Dietrich",
            "year": 1422,
          },
        ],
      },
    ],
  },
]
`;
